# Clustered_Hybrid_Search

./: CMakeLists.txt  ClusteringHNSW (3).eps  Predicate-aware-vector-search  README.md
dataset_creation/: datacreation.h
examples/constants/: cluster_level_search_highselectivity.txt  ground_truth_batched_filtered.txt  index_construction.txt  point_query.txt
examples/cpp/: Result_note_book.ipynb  Untitled-1.ipynb  Untitled-4.ipynb  constants_and_filepaths.txt  example_cluster_level_search.cpp  example_conjunction_search.cpp  example_dataset_creation.cpp  example_disjunction_search.cpp  example_dynamic_filtering_search.cpp  example_filter.cpp  example_filter_ground_truth_computer.cpp  example_filter_index_creation.cpp  example_point_search.cpp  example_range_search.cpp  index_construction.cpp  index_creation.cpp  point_query_example.cpp  range_query_example.cpp
examples/python_notebook/: Recall_compute.ipynb  Recall_computer.ipynb  syntatic_dataset_creator.ipynb
hnswlib/: BPlusTree.h  Node.h  Ranges.h  Untitled-1.ipynb  bloom.h  bruteforce.h  count_min_sketch_min_hash.hpp  hnswalg.h  hnswlib.h  linktree.h  memoryaccess.h  partitioned_counter.h  range_connection.h  regression.h
hnswlibcextensionfiles/: bloom.c  count_min_sketch.c  count_min_sketch_min_hash.cpp  hashutil.c  partitioned_counter.c
predictive_conjuctive_queries/: predictive_conjuctive_queries_clustering.h
predictive_dynamic_filter_queries/: cluster_level_filtering.h  predictive_dynamic_filtering.h
predictive_hybrid_queries/: predictive_disjunction_queries_clustering.h
predictive_point_queries/: count_min_sketch_min_hash.cpp  count_min_sketch_min_hash.h  memory_access.h  predictive_point_hnsw.h
predictive_range_queries/: piece_wise_linear_regression.h  predictive_range_hnsw.h  quantile_regression.h  ranges.h  regression.h
